# short-url-service

./: .gitignore  Makefile  README.md  pyproject.toml  server.py
docker/: docker-compose.yaml
frontend/: .env  Dockerfile  README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: CutBlock.vue
frontend/src/components/icons/: ScissorsLogo.vue
frontend/src/services/: urlService.ts
python3/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
server/python3/: .env  Dockerfile  docker-compose.yml  pyproject.toml  server.py
